# your-trading-manager-executor

./: .gitignore  Dockerfile  README.md  RELEASES.md  SECURITY.md  TRUST.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: ytm-executor.service
docs/: NETWORK.md  PROTOCOL.md  RISK_POLICY.md
scripts/: build_artifact.sh  install-venv.sh  install.sh  sign_artifact.sh
src/ytm_executor/: __init__.py  adapters.py  binance_futures.py  binance_spot.py  cli.py  client.py  execution_store.py  guards.py  okx_swap.py  preflight.py  reconciliation.py  risk.py  secret_store.py  state.py  validation.py  validation_store.py
tests/: test_adapters.py  test_binance_futures.py  test_binance_futures_dry_run.py  test_binance_spot.py  test_execution_store.py  test_no_secret_egress.py  test_okx_reconciliation.py  test_okx_swap.py  test_okx_swap_dry_run.py  test_preflight.py  test_risk.py  test_secret_store.py  test_validation_okx.py
