[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ytm-executor"
version = "0.2.0"
description = "Self-hosted zero-secret executor for Your Trading Manager."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binance-sdk-spot==8.4.0",
    "cryptography>=48.0.0",
    "t-tech-investments>=0.3.3",
]

[project.scripts]
ytm-executor = "ytm_executor.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.14",
]

[tool.uv.sources]
t-tech-investments = { index = "tbank" }

[[tool.uv.index]]
name = "tbank"
url = "https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
